k8s-avideo/network/k8s-avideo-app-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: k8s-avideo-app-net
  namespace: avideo
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/k8s-avideo-app-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/k8s-avideo-app-net: "true"
